# agentic-grid

./: .env  .gitignore  COMPREHENSIVE_GUIDE.md  DOCKER_README.md  Dockerfile  ENDPOINTS.md  README.md  WORKFLOW.md  demo.py  docker-compose.yml  env.example  env.template  main.py  pyproject.toml  requirements.txt  run_api.py  run_tests.py  setup.py  start.sh  stop_agents.sh  test_docker_setup.py
config/: llm_examples.yaml
cursor-reference-docs/: backend-structure.md  flow-doc.md  implementation-plan.md  prd.md  project-rules.md  security-checklist.md  tech-stack-doc.md
monitoring/: prometheus.yml  solar_agent_rules.yml
new-solar-agent/: .gitignore  main.py  pyproject.toml  requirements.txt
new-solar-agent/tests/: test_workflow.py
new-utility-agent/: .gitignore  README.md  requirements.txt
new-utility-agent/tests/: test_workflow.py
new-utility-agent/utility_agent/: comms.py  config.py  logging_config.py
prompt-templates/solar/: anomaly_explanation.meta.yaml  anomaly_explanation.prompt
solar_agent/: __init__.py
solar_agent/adapters/: __init__.py  base.py  simulated.py
solar_agent/ai/: __init__.py  langgraph_flows.py  prompt_manager.py  tools.py
solar_agent/api/: __init__.py  dependencies.py  main.py  routes.py
solar_agent/clients/: __init__.py  mcp_client.py  utility_client.py
solar_agent/core/: __init__.py  anomaly_detector.py  context_manager.py  forecast_engine.py  scheduler.py
solar_agent/models/: __init__.py  config.py  schemas.py
streamlit_ui/: app.py  requirements.txt
tests/: test_api.py
utility_agent/: config.py  logging_config.py
(+94 files in other folders)
